force-app/main/default/objects/RE_Custom_Ops_Configuration__c/RE_Custom_Ops_Configuration__c.object-meta.xml
<CustomObject>
    <label>Custom Ops Configuration</label>
    <nameField>
        <label>Calculation Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Ops Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>