force-app/main/default/objects/RE_Custom_Ops_Configuration__c/fields/RE_Country__c.field-meta.xml
<CustomField>
    <fullName>RE_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RT_Revolution_Country</valueSetName>
    </valueSet>
</CustomField>