force-app/main/default/objects/RE_Custom_Ops_Configuration__c/fields/RE_Editable_Field__c.field-meta.xml
<CustomField>
    <fullName>RE_Editable_Field__c</fullName>
    <label>Editable Field</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RE_Final_Price_Rebate__c</fullName>
                <label>Final Price Rebate</label>
            </value>
            <value>
                <fullName>RE_Pricing_Level__c</fullName>
                <label>Pricing Level</label>
            </value>
            <value>
                <fullName>RE_Transport_Charge__c</fullName>
                <label>Transport Charge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>