force-app/main/default/objects/RE_Custom_Ops_Configuration__c/fields/RE_Frequency__c.field-meta.xml
<CustomField>
    <fullName>RE_Frequency__c</fullName>
    <label>Frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sun</fullName>
            </value>
            <value>
                <fullName>Mon</fullName>
            </value>
            <value>
                <fullName>Tue</fullName>
            </value>
            <value>
                <fullName>Wed</fullName>
            </value>
            <value>
                <fullName>Thu</fullName>
            </value>
            <value>
                <fullName>Fri</fullName>
            </value>
            <value>
                <fullName>Sat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>