force-app/main/default/objects/RE_Custom_Ops_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Country__c</columns>
    <columns>RE_Editable_Field__c</columns>
    <columns>RE_Frequency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>